devops/kubernetes/gitops/manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: java-app-service
                port:
                  number: 7000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 80
